--- a/content/blogs/Homework1_wine.html
+++ b/content/blogs/Homework1_wine.html
@@ -1,15 +1,6 @@
 ---
-title: "Top 25 Countries that consume wine, beer and spirits"
-author: "Study Group 36B: Doris Jiang, Marc Brothier, Max Clark, Konstantin Pinkl,                 Simon Yang, Viktor Nave"
-date: "27-Sep-2020"
-output:
-  html_document:
-    theme: flatly
-    highlight: zenburn
-    number_sections: yes
-    toc: yes
-    toc_float: yes
-    code_folding: show
+title: "Boris Bike Stats"
+output: html_document
 ---
 
 
