--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -184,7 +184,7 @@
                         <div class="content">
                             <div class="inner">
                                 <header class="major">
-                                    <h3>Top 25 Countries that consume wine, beer and spirits</h3>
+                                    <h3>Boris Bike Stats</h3>
                                 </header>
                                 <p></p>
                                 <ul class="actions">
