--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                 <img src="img/drinks.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/homework1_wine" class="link">Analysis on Top 25 Countries that consume alcohol</a></h3>
+                <h3><a href="/blogs/Drinks" class="link">Analysis on Top 25 Countries that consume alcohol</a></h3>
                 <p>Are stereotypes true?</p>
             </header>
         </article>
