--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -161,6 +161,23 @@
                     </section>
                     
                     <section>
+                        <a href="/blogs/about/" class="image">
+							<img src="/img/blogs/" alt="" data-position="center center" />
+						</a>
+                        <div class="content">
+                            <div class="inner">
+                                <header class="major">
+                                    <h3>About me</h3>
+                                </header>
+                                <p></p>
+                                <ul class="actions">
+                                    <li><a href="/blogs/about/" class="button">Learn more</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    
+                    <section>
                         <a href="/blogs/newibm/" class="image">
 							<img src="/img/blogs/" alt="" data-position="center center" />
 						</a>
