--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                 <img src="img/canarywharf.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/CV" class="link">Simon</a></h3>
+                <h3><a href="/blogs/about" class="link">Simon</a></h3>
                 <p>Welcome to the site</p>
             </header>
         </article>
@@ -127,7 +127,7 @@
                 <img src="img/nyse.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/blog5" class="link">Selected equity returns on NYSE</a></h3>
+                <h3><a href="/blogs/stock" class="link">Selected equity returns on NYSE</a></h3>
                 <p>Stock Returns</p>
             </header>
         </article>
